<resources>
    <string name="app_name">MemoCutter</string>

    <!--> First Activity </-->
    <string name="first_button_last">Last cut audio files</string>
    <string name="first_button_merge">Cut audios together</string>
    <string name="first_button">Search folders</string>
    <string name="first_select_file">Select a file</string>
    <string name="first_no_file_manager">You dont have a file manager installed</string>
    <string name="first_checkbox">Always show Appintro</string>
    <string name="first_checkbox_condensed">Show intro</string>
    <string name="first_button_other_app">Share from another app</string>

    <!--> Edit Activity </-->
    <string name="edit_load_fail">Could not load the file. The file format is not supported.</string>
    <string name="edit_wait">Please wait..</string>
    <string name="edit_concat">Concatenating audio files...</string>
    <string name="edit_concat_success">Concatenation was successful</string>
    <string name="edit_concat_fail">Unexpected error while concatenating</string>
    <string name="edit_convert">Converting to .mp3</string>
    <string name="edit_cut">Cutting the audio file...</string>
    <string name="edit_cut_fail">Error occurred. The file format is not supported.</string>
    <string name="edit_cut_not_allowed">You must set a valid beginning and end time</string>

    <!--> Search activity </-->
    <string name="search_search">search</string>
    <string name="search_delete">Are you sure you want to delete this?</string>
    <string name="search_delete_yes">Remove</string>
    <string name="search_delete_no">Cancel</string>
    <string name="search_delete_confirm">Confirm</string>
    <string name="search_rename_title">Rename:</string>

    <!--> AppIntro </-->
    <string name="intro_slide1_title">MemoCutter</string>
    <string name="intro_slide1_text">An easy way to cut and resend audio memos and audio files. Most functionality depends on reading and writing files in the /AudioCutter folder, thus we need the corresponding permission.</string>
    <string name="intro_slide2_title">How to load a file</string>
    <string name="intro_slide2_text">Look out for the share symbol over an audio file and choose this app as the target. Alternatively, you can browse your folders to choose a file manually.</string>
    <string name="intro_slide3_title">How to cut a file</string>
    <string name="intro_slide3_text">Use the range bar to define which part of the file you want to cut out. Press the bottom right button to cut out. Now you can instantly share your new audio files!</string>
    <string name="intro_slide4_title">Audio files</string>
    <string name="intro_slide4_text">The app gives you an overview over your audio files. You can delete a file by swiping it to the left. You can rename a file by long clicking an item. For your information, they are stored in the folder /AudioCutter.</string>
    <string name="intro_slide5_title">Combine audios</string>
    <string name="intro_slide5_text">Long click on the items you want to combine. Order is relevant. Then click the bottom right button.</string>

    <!--> Other </-->
    <string name="other_share">Share audio via</string>
    <string name="folder_name" translatable="false">AudioCutter</string>

    <string name="combine_not_possible">You must first choose at least 2 items</string>
    <string name="need_to_reload">Too many media players active, reloading..</string>

    <!--> Menu </-->
    <string name="background_standard_txt">Simplistic</string>
    <string name="background_white_txt">Tainted white</string>
    <string name="background_glitter_gold_txt">Special gold</string>
    <string name="background_glitter_pink_txt">Special pink</string>
    <string name="background_glitter_blue_txt">Special blue</string>

    <string name="background_standard_sel">Simplistic style selected.</string>
    <string name="background_white_sel">White style selected.</string>
    <string name="background_glitter_gold_sel">Gold style selected. </string>
    <string name="background_glitter_pink_sel">Pink style selected. </string>
    <string name="background_glitter_blue_sel">Blue style selected. </string>

    <string name="background_custom">Custom style</string>
    <string name="background_custom_txt">Custom style selected.</string>

    <string name="first_patterbox">Activate patter</string>

    <string name="about_page_txt">About</string>

    <string name="about_page_description">MemoCutter: Contact, credits, licenses \nNote that this project is open source and can be viewed with its perspective license in the "Connect with us" section</string>
    <string name="about_page_version" translatable="false">Version 0.9.8</string>

    <string name="about_page_git_project">This project on GitHub</string>
    <string name="about_page_git_project_link" translatable="false">https://github.com/recklessracoon/memocutter</string>
    <string name="about_page_email" translatable="false">conditioncontagious@gmail.com</string>

    <string name="about_page_credits">Credits</string>

    <string name="about_page_icons">Icons created with Android Studio\'s Image Asset Studio</string>
    <string name="about_page_icons_link" translatable="false">https://creativecommons.org/licenses/by/4.0/</string>

    <string name="about_page_bg" translatable="false">Gold,pink,blue backgrounds designed by kjpargeter/Freepik</string>
    <string name="about_page_bg_link" translatable="false">http://www.freepik.com</string>

    <string name="about_page_credits_libraries">Used libraries</string>

    <string name="about_page_lib_ffmpeg">ffmpeg-android-java on GitHub</string>
    <string name="about_page_lib_appintro">AppIntro on GitHub</string>
    <string name="about_page_lib_aboutpage">android-about-page on GitHub</string>
    <string name="about_page_lib_rangebar">SimpleRangeBar on GitHub</string>

    <string name="about_page_lib_ffmpeg_link" translatable="false">https://github.com/WritingMinds/ffmpeg-android-java/</string>
    <string name="about_page_lib_appintro_link" translatable="false">https://github.com/apl-devs/AppIntro</string>
    <string name="about_page_lib_aboutpage_link" translatable="false">https://github.com/medyo/android-about-page/blob/master/README.md</string>
    <string name="about_page_lib_rangebar_link" translatable="false">https://github.com/recklessracoon/simplerangebar-android</string>

    <string name="about_page_connect">Connect with us</string>
    <string name="about_page_connect_git_name" translatable="false">recklessracoon</string>

    <string name="about_page_license">View respective license</string>

    <string name="search_file_load_fail">Problem loading audios. The external storage permission is probably missing.</string>
    <string name="search_particular_file_load_fail">Could not load particular file</string>
    <string name="edit_no_files">You didn\'t cut any audios yet. Cut audios and all .mp3 files in /AudioCutter folder will be shown here.</string>

    <string name="permission_explain">Most functionality depends on reading and writing files in the /AudioCutter folder, thus we need the corresponding permission.</string>
    <string name="permission_granted">Permission granted. You might need to restart the app.</string>
    <string name="permission_denied">Permission denied. Most functionality is not possible.</string>

    <string name="list_files_cannot_browse_no_permission">We need a permission to view all your folders and audio files.</string>
    <string name="list_files_cannot_browse_no_permission_given">Permissions are granted, but app has to be restarted.</string>

    <string name="renameable_not_renamed">Could not rename the file.</string>
    <string name="removable_not_removed">Could not remove the file.</string>
</resources>
