<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/primaryBackground"
    tools:context="com.example.roman.audiocuttertest.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher_sci"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <Button
            android:text="@string/first_button_other_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_button_other_app"
            android:layout_marginBottom="@dimen/fab_margin"
            android:textColor="@color/colorWhite"
            android:background="@drawable/roundbutton"
            android:layout_weight="1"
            android:textSize="14sp" />

    <Button
        app:layout_widthPercent="100%"
        app:layout_aspectRatio="100%"
    android:id="@+id/first_button"
    android:background="@drawable/roundbutton"
    android:textSize="14sp"
        android:textColor="@color/colorWhite"
    android:text="@string/first_button"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/first_button_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_button_last"
        android:layout_marginBottom="@dimen/fab_margin"
        android:textColor="@color/colorWhite"
        android:background="@drawable/roundbutton"
        android:layout_weight="1"
        android:textSize="14sp" />

        <Button
            android:text="@string/first_button_merge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_button_merge"
            android:layout_marginBottom="@dimen/fab_margin"
            android:textColor="@color/colorWhite"
            android:background="@drawable/roundbutton"
            android:layout_weight="1"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>
